<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bigbottools</name>
  <version>0.0.1</version>
  <description>TODO: Tools to test parts of motorcontrol</description>
  <maintainer email="ekenna510@verizon.net">robot</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend> 
  <depend>rclcpp</depend>
  <depend>rcutils</depend>  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>joy</depend> 
  <depend>tf2_ros</depend> 
  <depend>tf2_msgs</depend>  



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
